Refactor event handling and outbox orchestration for improved transaction management and state transitions